<resources>
    <string name="app_name">Biller</string>
    <string name="todo">TODO</string>
    <string name="biller">Biller</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="gst_number">GST Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="get_otp">Get OTP</string>
    <string name="number">Number</string>
    <string name="customer_name">Customer Name</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="Biller">Biller_OTP</string>
    <string name="description">OTP for Biller application</string>
    <string name="add_products">Add Products</string>
    <string name="show_list">Show List</string>
    <string name="add_item">Add Item</string>
    <string name="show_data">Show Data</string>
    <string name="savabackup">SavaBackup</string>
    <string name="download_from_cloud">Download From Cloud</string>
    <string name="upload_to_cloud">Upload TO Cloud</string>
    <string name="backup_to_cloud">Backup to Cloud</string>
    <string name="search_by_customer_name">Search By Customer Name</string>
    <string name="customers">Customers</string>
    <string name="search_by_contact_number">Search By Contact Number</string>
    <string name="search_date_or_start_range">Search Date or Start Range</string>
    <string name="end_of_date">End of Date</string>
    <string name="search_by_billid">Search By BillID</string>
    <string name="search">Search</string>
    <string name="show_all_customers">Show All Customers</string>
    <string name="download_pdf">Download PDF</string>
    <string name="update">Update</string>
    <string name="show">Show</string>
    <string name="delete">Delete</string>
    <string name="enter_customer_information">Enter Customer Information</string>
    <string name="date">date</string>
    <string name="enter_products">Enter Products</string>
    <string name="permision_request">Permision_Request</string>
    <string name="display">display</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="addmore">AddMore</string>
    <string name="create_pdf">Create PDF</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="textview">TextView</string>
    <string name="Menulogo">menu</string>
    <string name="item_price">Item Price:</string>
    <string name="item_quantity">Item quantity:</string>
    <string name="subtotal">subtotal :</string>
    <string name="customer_information">Customer Information</string>
    <string name="about">About</string>
    <string name="edit_information">Edit Information</string>
    <string name="backup">Backup</string>
</resources>